--- a/x-testing/testing/index.html
+++ b/x-testing/testing/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testing</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="variables.css">
 </head>
 
 <body>
-    
+
 </body>
 
 </html>
